[project]
name = "dummy-sandbox"
version = "0.0.1"
authors = [
    {name = "svlandeg"},
]
description = "Dummy Python package for sandbox experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ruff>=0.8",
    "ty>=0.0.30",
]

[project.optional-dependencies]
test = [
    "pytest>=8"
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
